; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/MAC/extr_fman_memac.c_fman_memac_set_rx_ignore_pause_frames.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/MAC/extr_fman_memac.c_fman_memac_set_rx_ignore_pause_frames.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memac_regs = type { i32 }

@CMD_CFG_PAUSE_IGNORE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fman_memac_set_rx_ignore_pause_frames(%struct.memac_regs* %0, i32 %1) #0 {
  %3 = alloca %struct.memac_regs*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.memac_regs* %0, %struct.memac_regs** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.memac_regs*, %struct.memac_regs** %3, align 8
  %7 = getelementptr inbounds %struct.memac_regs, %struct.memac_regs* %6, i32 0, i32 0
  %8 = call i32 @ioread32be(i32* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @CMD_CFG_PAUSE_IGNORE, align 4
  %13 = load i32, i32* %5, align 4
  %14 = or i32 %13, %12
  store i32 %14, i32* %5, align 4
  br label %20

15:                                               ; preds = %2
  %16 = load i32, i32* @CMD_CFG_PAUSE_IGNORE, align 4
  %17 = xor i32 %16, -1
  %18 = load i32, i32* %5, align 4
  %19 = and i32 %18, %17
  store i32 %19, i32* %5, align 4
  br label %20

20:                                               ; preds = %15, %11
  %21 = load i32, i32* %5, align 4
  %22 = load %struct.memac_regs*, %struct.memac_regs** %3, align 8
  %23 = getelementptr inbounds %struct.memac_regs, %struct.memac_regs* %22, i32 0, i32 0
  %24 = call i32 @iowrite32be(i32 %21, i32* %23)
  ret void
}

declare dso_local i32 @ioread32be(i32*) #1

declare dso_local i32 @iowrite32be(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
